--- a/make_latex_table.ipynb
+++ b/make_latex_table.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -268,14 +268,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "R indoor\n",
+      "R indoor\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "\\begin{tabular}{rrrrrrrrrr}\n",
       "\\toprule\n",
       " Points limit &  Proposed (5\\%) &   ORB &  TORB &  SPHORB &  SIFT &  TSIFT &  SPoint &  ALIKE &  TALIKE \\\\\n",
@@ -473,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -485,12 +491,12 @@
       "\\toprule\n",
       " Points limit &  Proposed (5\\%) &    ORB &   TORB &  SPHORB &   SIFT &  TSIFT &  SPoint &  ALIKE &  TALIKE \\\\\n",
       "\\midrule\n",
-      "          500 &         0.0447 & 0.0655 & 0.0643 &     NaN & 0.0488 & 0.0445 &  0.0448 & 0.0571 &  0.0692 \\\\\n",
-      "         1000 &         0.0451 & 0.0490 & 0.0474 &     NaN & 0.0439 & 0.0433 &  0.0445 & 0.0600 &  0.0638 \\\\\n",
-      "        10000 &         0.0451 & 0.0544 & 0.0521 &     NaN & 0.0434 & 0.0432 &  0.0440 & 0.0579 &  0.0743 \\\\\n",
-      "          500 &         0.0060 & 0.0477 & 0.0449 &     NaN & 0.0069 & 0.0061 &  0.0059 & 0.0102 &  0.0230 \\\\\n",
-      "         1000 &         0.0060 & 0.0066 & 0.0064 &     NaN & 0.0063 & 0.0060 &  0.0059 & 0.0146 &  0.0147 \\\\\n",
-      "        10000 &         0.0060 & 0.0075 & 0.0073 &     NaN & 0.0063 & 0.0060 &  0.0059 & 0.0084 &  0.0527 \\\\\n",
+      "          500 &         0.0447 & 0.0655 & 0.0643 &  0.0746 & 0.0488 & 0.0445 &  0.0448 & 0.0571 &  0.0692 \\\\\n",
+      "         1000 &         0.0451 & 0.0490 & 0.0474 &  0.0483 & 0.0439 & 0.0433 &  0.0445 & 0.0600 &  0.0638 \\\\\n",
+      "        10000 &         0.0451 & 0.0544 & 0.0521 &  0.0510 & 0.0434 & 0.0432 &  0.0440 & 0.0579 &  0.0743 \\\\\n",
+      "          500 &         0.0060 & 0.0477 & 0.0449 &  0.0646 & 0.0069 & 0.0061 &  0.0059 & 0.0102 &  0.0230 \\\\\n",
+      "         1000 &         0.0060 & 0.0066 & 0.0064 &  0.0064 & 0.0063 & 0.0060 &  0.0059 & 0.0146 &  0.0147 \\\\\n",
+      "        10000 &         0.0060 & 0.0075 & 0.0073 &  0.0067 & 0.0063 & 0.0060 &  0.0059 & 0.0084 &  0.0527 \\\\\n",
       "\\bottomrule\n",
       "\\end{tabular}\n",
       "\n",
@@ -512,12 +518,12 @@
       "\\toprule\n",
       " Points limit &  Proposed (5\\%) &    ORB &   TORB &  SPHORB &   SIFT &  TSIFT &  SPoint &  ALIKE &  TALIKE \\\\\n",
       "\\midrule\n",
-      "          500 &         0.6663 & 1.3111 & 1.2627 &     NaN & 0.8775 & 0.6141 &  0.7904 & 0.7552 &  0.7382 \\\\\n",
-      "         1000 &         0.6452 & 1.2276 & 1.1430 &     NaN & 0.5736 & 0.4861 &  0.6824 & 0.7687 &  0.6800 \\\\\n",
-      "        10000 &         0.6452 & 1.0825 & 0.7738 &     NaN & 0.5328 & 0.4845 &  0.6965 & 0.7566 &  0.6756 \\\\\n",
-      "          500 &         0.8794 & 2.3755 & 2.1124 &     NaN & 1.4552 & 0.8351 &  1.0763 & 1.2517 &  1.1925 \\\\\n",
-      "         1000 &         0.8280 & 2.2380 & 1.8599 &     NaN & 0.6964 & 0.5092 &  0.8815 & 1.2754 &  1.0038 \\\\\n",
-      "        10000 &         0.8280 & 2.0461 & 1.1535 &     NaN & 0.5900 & 0.5073 &  0.9200 & 1.2367 &  0.9778 \\\\\n",
+      "          500 &         0.6663 & 1.3111 & 1.2627 &  1.2512 & 0.8775 & 0.6141 &  0.7904 & 0.7552 &  0.7382 \\\\\n",
+      "         1000 &         0.6452 & 1.2276 & 1.1430 &  1.1910 & 0.5736 & 0.4861 &  0.6824 & 0.7687 &  0.6800 \\\\\n",
+      "        10000 &         0.6452 & 1.0825 & 0.7738 &  0.9435 & 0.5328 & 0.4845 &  0.6965 & 0.7566 &  0.6756 \\\\\n",
+      "          500 &         0.8794 & 2.3755 & 2.1124 &  2.2547 & 1.4552 & 0.8351 &  1.0763 & 1.2517 &  1.1925 \\\\\n",
+      "         1000 &         0.8280 & 2.2380 & 1.8599 &  2.1178 & 0.6964 & 0.5092 &  0.8815 & 1.2754 &  1.0038 \\\\\n",
+      "        10000 &         0.8280 & 2.0461 & 1.1535 &  1.4825 & 0.5900 & 0.5073 &  0.9200 & 1.2367 &  0.9778 \\\\\n",
       "\\bottomrule\n",
       "\\end{tabular}\n",
       "\n",
