--- a/EDA_makesim.ipynb
+++ b/EDA_makesim.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/imonalc/anaconda3/envs/keypoints/lib/python3.7/site-packages/tqdm/auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import sys\n",
     "import os\n",
@@ -47,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -279,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -343,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -351,34 +360,48 @@
      "output_type": "stream",
      "text": [
       "./data/Farm_pair/O.png\n",
-      "image: 0.291156530380249\n",
-      "Proposed 606\n",
-      "detection: 1.249746561050415\n",
+      "image: 0.12318563461303711\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/imonalc/anaconda3/envs/keypoints/lib/python3.7/site-packages/torch/nn/functional.py:4228: UserWarning: Default grid_sample and affine_grid behavior has changed to align_corners=False since 1.3.0. Please specify align_corners=True if the old behavior is desired. See the documentation of grid_sample for details.\n",
+      "  \"Default grid_sample and affine_grid behavior has changed \"\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Proposed 520\n",
+      "detection: 1.9257798194885254\n",
       "(500, 256)\n",
       "./data/Farm_pair/O.png\n",
-      "image: 0.3296985626220703\n",
-      "orb 10000\n",
-      "detection: 0.8227646350860596\n",
+      "image: 0.1635584831237793\n",
+      "orb 9263\n",
+      "detection: 0.41322803497314453\n",
       "(500, 32)\n",
       "./data/Farm_pair/O.png\n",
-      "image: 0.29211974143981934\n",
-      "torb 13825\n",
-      "detection: 0.7499933242797852\n",
+      "image: 0.03667473793029785\n",
+      "torb 10480\n",
+      "detection: 0.4716174602508545\n",
       "(500, 32)\n",
       "./data/Farm_pair/O.png\n",
-      "image: 0.28824377059936523\n",
-      "sift 10001\n",
-      "detection: 1.8640127182006836\n",
+      "image: 0.03555583953857422\n",
+      "sift 3241\n",
+      "detection: 0.5002164840698242\n",
       "(500, 128)\n",
       "./data/Farm_pair/O.png\n",
-      "image: 0.29044580459594727\n",
-      "tsift 1532\n",
-      "detection: 2.0598273277282715\n",
+      "image: 0.0409855842590332\n",
+      "tsift 1859\n",
+      "detection: 2.404430389404297\n",
       "(500, 128)\n",
       "./data/Farm_pair/O.png\n",
-      "image: 0.28027892112731934\n",
-      "spoint 21776\n",
-      "detection: 1.4250359535217285\n",
+      "image: 0.03394937515258789\n",
+      "spoint 1013\n",
+      "detection: 0.4361600875854492\n",
       "(500, 256)\n"
      ]
     }
@@ -394,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -410,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
