--- a/make_latex_table.ipynb
+++ b/make_latex_table.ipynb
@@ -268,20 +268,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "R indoor\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "R indoor\n",
       "\\begin{tabular}{rrrrrrrrrr}\n",
       "\\toprule\n",
       " Points limit &  Proposed (5\\%) &   ORB &  TORB &  SPHORB &  SIFT &  TSIFT &  SPoint &  ALIKE &  TALIKE \\\\\n",
