--- a/test.ipynb
+++ b/test.ipynb
@@ -2,6 +2,491 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import csv\n",
+    "import os\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import math\n",
+    "\n",
+    "COMPARE_DESCRIPTORS = [\"Proposed\", \"orb\", \"sphorb\", \"sift\", \"spoint\", \"alike\", ]\n",
+    "ABLATION_DESCRIPTORS = [\"Proposed\",\"Proposed01\", \"Proposed1\", \"Proposed10\", \"Proposed_un\", \"Ltspoint\", \"tspoint\", \"Ftspoint\"] \n",
+    "NOT_T_DESCRIPTORS = [\"spoint\", \"tspoint\", \"sphorb\", \"Ltspoint\", \"Proposed01\", \"Proposed03\", \"Proposed05\", \"Proposed1\", \"Proposed3\", \"Proposed\", \"Proposed10\", \"Proposed20\", \"Proposed_un\", \"Ftspoint\"]\n",
+    "METHODS = [\"\", \"t\"]\n",
+    "PARAMS = [\"R\", \"T\"]\n",
+    "PARAMS_DICT = {\"R\": \"Rotation\", \"T\": \"Translation\"}\n",
+    "ALL_LOCS = [\"Classroom\", \"Room\", \"Realistic\", \"Interior1\", \"Interior2\", \"Urban1\", \"Urban2\", \"Urban3\", \"Urban4\"]\n",
+    "INDOORS = [\"Classroom\", \"Room\", \"Realistic\", \"Interior1\", \"Interior2\"]\n",
+    "OUTDOORS = [\"Urban1\", \"Urban2\", \"Urban3\", \"Urban4\"]\n",
+    "POSES = [\"pose1\", \"pose2\", \"pose3\", \"pose4\", \"pose5\"]\n",
+    "TIME_CATEGORYS = [\"FP\", \"MC\", \"PE\"]\n",
+    "DESCRIPTORS_DICT = {\"Proposed1\": \"Proposed (1%)\",\n",
+    "                    \"Proposed01\": \"Proposed (0.1%)\",\n",
+    "                    \"Proposed03\": \"Proposed (0.3%)\",\n",
+    "                    \"Proposed05\": \"Proposed (0.5%)\",\n",
+    "                    \"Proposed3\": \"Proposed (3%)\",\n",
+    "                    \"Proposed\": \"Proposed (5%)\",\n",
+    "                    \"Proposed10\": \"Proposed (10%)\",\n",
+    "                    \"Proposed20\": \"Proposed (20%)\",\n",
+    "                    \"Proposed_un\": \"MNN\",\n",
+    "                    \"orb\": \"ORB\", \n",
+    "                    \"sphorb\": \"SPHORB\",\n",
+    "                    \"sift\": \"SIFT\",\n",
+    "                    \"alike\": \"ALIKE\",\n",
+    "                    \"spoint\": \"SPoint\",\n",
+    "                    \"tspoint\": \"KNN+L\",\n",
+    "                    \"Ltspoint\": \"Proposed (5%)+L\",\n",
+    "                    \"Ftspoint\": \"FLANN\"\n",
+    "                    }\n",
+    "METHODS_DICT = {\"t\": \"T\", \"\":\"\"}\n",
+    "INDEX_CATEGORYS = [\"MATCHING_NUM\", \"MATCHING_SCORE\", \"MEAN_MATCHING_ACCURCY\"]\n",
+    "\n",
+    "\n",
+    "def read_csv_data(file_path):\n",
+    "    with open(file_path, 'r') as file:\n",
+    "        reader = csv.reader(file)\n",
+    "        data = [float(row[0]) for row in reader]\n",
+    "    return data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "500\n",
+      "MATCHING_NUM\n",
+      " Proposed 112.1876\n",
+      " orb 65.59895833333333\n",
+      "t orb 82.0849358974359\n",
+      " sphorb 79.8016826923077\n",
+      " sift 31.790407093913746\n",
+      "t sift 52.51478331308222\n",
+      " spoint 26.9516\n",
+      " alike 76.71015656362907\n",
+      "t alike 69.8012\n",
+      "MATCHING_SCORE\n",
+      " Proposed 0.22549397307501345\n",
+      " orb 0.13135050918518068\n",
+      "t orb 0.1643269338840794\n",
+      " sphorb 0.15631922076394345\n",
+      " sift 0.06365984944633558\n",
+      "t sift 0.10508969385308985\n",
+      " spoint 0.05423112351556348\n",
+      " alike 0.15355757811801388\n",
+      "t alike 0.14518502262684851\n",
+      "MEAN_MATCHING_ACCURCY\n",
+      " Proposed 0.6212508422180953\n",
+      " orb 0.4465945218117177\n",
+      "t orb 0.52169380300867\n",
+      " sphorb 0.5132336582162589\n",
+      " sift 0.7001364212263743\n",
+      "t sift 0.7464196443733977\n",
+      " spoint 0.8754580847382843\n",
+      " alike 0.5339720957751419\n",
+      "t alike 0.5611509198546409\n",
+      "MATCHING_NUM\n",
+      " Proposed 112.1876\n",
+      " Proposed01 59.5444\n",
+      " Proposed1 107.234\n",
+      " Proposed10 35.134\n",
+      " Proposed_un 35.134\n",
+      " Ltspoint 37.7732\n",
+      " tspoint 24.1024\n",
+      " Ftspoint 31.8332\n",
+      "MATCHING_SCORE\n",
+      " Proposed 0.22549397307501345\n",
+      " Proposed01 0.11992620581290289\n",
+      " Proposed1 0.21561002013160113\n",
+      " Proposed10 0.07107075097206518\n",
+      " Proposed_un 0.07107075097206518\n",
+      " Ltspoint 0.07644362134183676\n",
+      " tspoint 0.0487094737513405\n",
+      " Ftspoint 0.06429612137440065\n",
+      "MEAN_MATCHING_ACCURCY\n",
+      " Proposed 0.6212508422180953\n",
+      " Proposed01 0.7847451960868662\n",
+      " Proposed1 0.6423038438309125\n",
+      " Proposed10 0.8272124594645603\n",
+      " Proposed_un 0.8272124594645603\n",
+      " Ltspoint 0.7421607559333928\n",
+      " tspoint 0.9060731686394318\n",
+      " Ftspoint 0.8453807623050797\n",
+      "1000\n",
+      "MATCHING_NUM\n",
+      " Proposed 181.132\n",
+      " orb 113.29847756410257\n",
+      "t orb 149.51522435897436\n",
+      " sphorb 144.58934294871796\n",
+      " sift 49.7658202337767\n",
+      "t sift 88.50020251113811\n",
+      " spoint 31.0948\n",
+      " alike 134.9743075070253\n",
+      "t alike 114.2296\n",
+      "MATCHING_SCORE\n",
+      " Proposed 0.21136418999914544\n",
+      " orb 0.11338842391351654\n",
+      "t orb 0.14960486526929492\n",
+      " sphorb 0.14150944389075645\n",
+      " sift 0.05095336701349514\n",
+      "t sift 0.09456466327613965\n",
+      " spoint 0.03151632723201271\n",
+      " alike 0.13741185828026606\n",
+      "t alike 0.15454992732563508\n",
+      "MEAN_MATCHING_ACCURCY\n",
+      " Proposed 0.6287612272376789\n",
+      " orb 0.3979899511052097\n",
+      "t orb 0.48748352163677255\n",
+      " sphorb 0.488966080758299\n",
+      " sift 0.6671280762726847\n",
+      "t sift 0.7352422134368435\n",
+      " spoint 0.8824857760395364\n",
+      " alike 0.5153547167282867\n",
+      "t alike 0.5741084315782485\n",
+      "MATCHING_NUM\n",
+      " Proposed 181.132\n",
+      " Proposed01 114.0272\n",
+      " Proposed1 177.8912\n",
+      " Proposed10 44.5428\n",
+      " Proposed_un 44.5428\n",
+      " Ltspoint 62.1152\n",
+      " tspoint 29.36\n",
+      " Ftspoint 42.0332\n",
+      "MATCHING_SCORE\n",
+      " Proposed 0.21136418999914544\n",
+      " Proposed01 0.1315982525659867\n",
+      " Proposed1 0.20787145826222064\n",
+      " Proposed10 0.05335886960284312\n",
+      " Proposed_un 0.05335886960284312\n",
+      " Ltspoint 0.0783444107883212\n",
+      " tspoint 0.03498386214101349\n",
+      " Ftspoint 0.05049606198618051\n",
+      "MEAN_MATCHING_ACCURCY\n",
+      " Proposed 0.6287612272376789\n",
+      " Proposed01 0.7670975428585202\n",
+      " Proposed1 0.6402444887631111\n",
+      " Proposed10 0.8432490563493735\n",
+      " Proposed_un 0.8432490563493735\n",
+      " Ltspoint 0.7338506882303766\n",
+      " tspoint 0.9103897672899395\n",
+      " Ftspoint 0.8743509483965274\n",
+      "10000\n",
+      "MATCHING_NUM\n",
+      " Proposed 200.3236\n",
+      " orb 596.8012820512821\n",
+      "t orb 694.2900641025641\n",
+      " sphorb 956.7451923076923\n",
+      " sift 100.64651350261991\n",
+      "t sift 120.4726609963548\n",
+      " spoint 35.1932\n",
+      " alike 851.1469289441991\n",
+      "t alike 703.6411694032839\n",
+      "MATCHING_SCORE\n",
+      " Proposed 0.20867206687772163\n",
+      " orb 0.07743915956567905\n",
+      "t orb 0.11755437113857421\n",
+      " sphorb 0.10756362120956159\n",
+      " sift 0.04540621717360341\n",
+      "t sift 0.0908922448174217\n",
+      " spoint 0.021051961717490207\n",
+      " alike 0.48198589719932516\n",
+      "t alike 0.8098847519369283\n",
+      "MEAN_MATCHING_ACCURCY\n",
+      " Proposed 0.6311929003816537\n",
+      " orb 0.3053347337029177\n",
+      "t orb 0.41655766442843317\n",
+      " sphorb 0.4360760593080917\n",
+      " sift 0.6663125923893622\n",
+      "t sift 0.7418889453546006\n",
+      " spoint 0.8874657235168594\n",
+      " alike 0.48480219493044574\n",
+      "t alike 0.5427728663725306\n",
+      "MATCHING_NUM\n",
+      " Proposed 200.3236\n",
+      " Proposed01 130.112\n",
+      " Proposed1 197.1684\n",
+      " Proposed10 44.9788\n",
+      " Proposed_un 44.9788\n",
+      " Ltspoint 300.8092\n",
+      " tspoint 31.4672\n",
+      " Ftspoint 82.0828\n",
+      "MATCHING_SCORE\n",
+      " Proposed 0.20867206687772163\n",
+      " Proposed01 0.13327750400850083\n",
+      " Proposed1 0.20580954099196733\n",
+      " Proposed10 0.05052154308782754\n",
+      " Proposed_un 0.05052154308782754\n",
+      " Ltspoint 0.34310819792503755\n",
+      " tspoint 0.03417851005162909\n",
+      " Ftspoint 0.09250377823561919\n",
+      "MEAN_MATCHING_ACCURCY\n",
+      " Proposed 0.6311929003816537\n",
+      " Proposed01 0.7681201311530306\n",
+      " Proposed1 0.6409846577719623\n",
+      " Proposed10 0.8500321554751925\n",
+      " Proposed_un 0.8500321554751925\n",
+      " Ltspoint 0.7025514531983201\n",
+      " tspoint 0.9097052500913967\n",
+      " Ftspoint 0.8614324796209832\n"
+     ]
+    }
+   ],
+   "source": [
+    "def calc_index():\n",
+    "    for idx_points, num_points in enumerate([500, 1000, 10000]):\n",
+    "        print(num_points)\n",
+    "        base_path = f\"results/FP_{num_points}/values\"\n",
+    "        for tgt in [\"compare\", \"ablation\"]:\n",
+    "            if tgt == \"compare\":\n",
+    "                descriptors = COMPARE_DESCRIPTORS\n",
+    "            else:\n",
+    "                descriptors = ABLATION_DESCRIPTORS\n",
+    "            for index_category in INDEX_CATEGORYS:\n",
+    "                print(index_category)\n",
+    "                for descriptor in descriptors:\n",
+    "                    for method in METHODS:\n",
+    "                        if descriptor in NOT_T_DESCRIPTORS and method == \"t\":\n",
+    "                            continue\n",
+    "                        all_time_data = []\n",
+    "                        for scene in ALL_LOCS:\n",
+    "                            file_path = f\"{base_path}/{scene}_{method}{descriptor}_5PA_GSM_wRT/{index_category}.csv\"\n",
+    "                            time_data = read_csv_data(file_path)\n",
+    "                            all_time_data.extend(time_data)\n",
+    "                        print(method, descriptor, np.mean(all_time_data))\n",
+    "    \n",
+    "\n",
+    "calc_index()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "500\n",
+      "MATCHING_NUM\n",
+      " Proposed 149.6\n",
+      " orb 130.048\n",
+      "t orb 109.298\n",
+      " sphorb 99.712\n",
+      " sift 81.506\n",
+      "t sift 95.21\n",
+      " spoint 100.022\n",
+      " alike 53.858\n",
+      "t alike 45.916\n",
+      "MATCHING_SCORE\n",
+      " Proposed 0.31530799505708357\n",
+      " orb 0.023971485816742966\n",
+      "t orb 0.030989344379597713\n",
+      " sphorb 0.20811185773782653\n",
+      " sift 0.07168813996707632\n",
+      "t sift 0.13646320098714382\n",
+      " spoint 0.11070994607424202\n",
+      " alike 0.036816788563950285\n",
+      "t alike 0.03323250709324588\n",
+      "MEAN_MATCHING_ACCURCY\n",
+      " Proposed 0.9456911616461486\n",
+      " orb 0.9719498667557259\n",
+      "t orb 0.9850872662847664\n",
+      " sphorb 0.9447927540692214\n",
+      " sift 0.9647834796023614\n",
+      "t sift 0.9706988978326663\n",
+      " spoint 0.9893481313573548\n",
+      " alike 0.9848440708479722\n",
+      "t alike 0.9938089773184503\n",
+      "MATCHING_NUM\n",
+      " Proposed 149.6\n",
+      " Proposed01 70.248\n",
+      " Proposed1 145.062\n",
+      " Proposed10 100.648\n",
+      " Proposed_un 100.648\n",
+      " Ltspoint 66.63\n",
+      " tspoint 100.648\n",
+      " Ftspoint 102.478\n",
+      "MATCHING_SCORE\n",
+      " Proposed 0.31530799505708357\n",
+      " Proposed01 0.146613235784712\n",
+      " Proposed1 0.30563445066596295\n",
+      " Proposed10 0.2127030786009516\n",
+      " Proposed_un 0.2127030786009516\n",
+      " Ltspoint 0.1408841219206608\n",
+      " tspoint 0.2127030786009516\n",
+      " Ftspoint 0.2164622273998784\n",
+      "MEAN_MATCHING_ACCURCY\n",
+      " Proposed 0.9456911616461486\n",
+      " Proposed01 0.9948658162630732\n",
+      " Proposed1 0.9808730295367795\n",
+      " Proposed10 0.9898846653461318\n",
+      " Proposed_un 0.9898846653461318\n",
+      " Ltspoint 0.9960403638643913\n",
+      " tspoint 0.9898846653461318\n",
+      " Ftspoint 0.9878697625459875\n",
+      "1000\n",
+      "MATCHING_NUM\n",
+      " Proposed 155.434\n",
+      " orb 263.402\n",
+      "t orb 233.67\n",
+      " sphorb 203.996\n",
+      " sift 120.154\n",
+      "t sift 131.308\n",
+      " spoint 140.928\n",
+      " alike 87.062\n",
+      "t alike 67.534\n",
+      "MATCHING_SCORE\n",
+      " Proposed 0.32521211934932054\n",
+      " orb 0.04857461583667744\n",
+      "t orb 0.06605100473550707\n",
+      " sphorb 0.4282708216057602\n",
+      " sift 0.1022274842938256\n",
+      "t sift 0.17946512557089805\n",
+      " spoint 0.15374335485823146\n",
+      " alike 0.05810308360168384\n",
+      "t alike 0.04741349246020554\n",
+      "MEAN_MATCHING_ACCURCY\n",
+      " Proposed 0.94544600273771\n",
+      " orb 0.9644087004303917\n",
+      "t orb 0.9794874756916545\n",
+      " sphorb 0.9435018543546966\n",
+      " sift 0.9646609598834734\n",
+      "t sift 0.9717680621227383\n",
+      " spoint 0.9871909299188432\n",
+      " alike 0.986734215968547\n",
+      "t alike 0.9936843399214254\n",
+      "MATCHING_NUM\n",
+      " Proposed 155.434\n",
+      " Proposed01 75.474\n",
+      " Proposed1 150.852\n",
+      " Proposed10 103.142\n",
+      " Proposed_un 103.142\n",
+      " Ltspoint 67.356\n",
+      " tspoint 103.142\n",
+      " Ftspoint 105.088\n",
+      "MATCHING_SCORE\n",
+      " Proposed 0.32521211934932054\n",
+      " Proposed01 0.1554566415318246\n",
+      " Proposed1 0.3154700973542264\n",
+      " Proposed10 0.21698802879427906\n",
+      " Proposed_un 0.21698802879427906\n",
+      " Ltspoint 0.1421291518171092\n",
+      " tspoint 0.21698802879427906\n",
+      " Ftspoint 0.22089515142862767\n",
+      "MEAN_MATCHING_ACCURCY\n",
+      " Proposed 0.94544600273771\n",
+      " Proposed01 0.9947804227629061\n",
+      " Proposed1 0.9803299266216086\n",
+      " Proposed10 0.9898335005656136\n",
+      " Proposed_un 0.9898335005656136\n",
+      " Ltspoint 0.9957502029874553\n",
+      " tspoint 0.9898335005656136\n",
+      " Ftspoint 0.987539592868175\n",
+      "10000\n",
+      "MATCHING_NUM\n",
+      " Proposed 155.434\n",
+      " orb 1019.972\n",
+      "t orb 760.93\n",
+      " sphorb 867.656\n",
+      " sift 148.59\n",
+      "t sift 132.086\n",
+      " spoint 145.714\n",
+      " alike 177.63\n",
+      "t alike 91.016\n",
+      "MATCHING_SCORE\n",
+      " Proposed 0.32521211934932054\n",
+      " orb 0.17934882687324602\n",
+      "t orb 0.19630781827937135\n",
+      " sphorb 1.8372221678388807\n",
+      " sift 0.11914020382129507\n",
+      "t sift 0.18016418402960943\n",
+      " spoint 0.1573097044048559\n",
+      " alike 0.10619023020807922\n",
+      "t alike 0.0621939532296219\n",
+      "MEAN_MATCHING_ACCURCY\n",
+      " Proposed 0.94544600273771\n",
+      " orb 0.7526072617997831\n",
+      "t orb 0.8088424484401697\n",
+      " sphorb 0.889826575459177\n",
+      " sift 0.9657107346780198\n",
+      "t sift 0.9712919912935161\n",
+      " spoint 0.9871669791376424\n",
+      " alike 0.9800894608369933\n",
+      "t alike 0.9912145589774426\n",
+      "MATCHING_NUM\n",
+      " Proposed 155.434\n",
+      " Proposed01 75.474\n",
+      " Proposed1 150.852\n",
+      " Proposed10 103.142\n",
+      " Proposed_un 103.142\n",
+      " Ltspoint 67.356\n",
+      " tspoint 103.142\n",
+      " Ftspoint 105.088\n",
+      "MATCHING_SCORE\n",
+      " Proposed 0.32521211934932054\n",
+      " Proposed01 0.1554566415318246\n",
+      " Proposed1 0.3154700973542264\n",
+      " Proposed10 0.21698802879427906\n",
+      " Proposed_un 0.21698802879427906\n",
+      " Ltspoint 0.1421291518171092\n",
+      " tspoint 0.21698802879427906\n",
+      " Ftspoint 0.22089515142862767\n",
+      "MEAN_MATCHING_ACCURCY\n",
+      " Proposed 0.94544600273771\n",
+      " Proposed01 0.9947804227629061\n",
+      " Proposed1 0.9803299266216086\n",
+      " Proposed10 0.9898335005656136\n",
+      " Proposed_un 0.9898335005656136\n",
+      " Ltspoint 0.9957502029874553\n",
+      " tspoint 0.9898335005656136\n",
+      " Ftspoint 0.987539592868175\n"
+     ]
+    }
+   ],
+   "source": [
+    "def calc_index_farm():\n",
+    "    for idx_points, num_points in enumerate([500, 1000, 10000]):\n",
+    "        print(num_points)\n",
+    "        base_path = f\"results/FP_{num_points}/values\"\n",
+    "        for tgt in [\"compare\", \"ablation\"]:\n",
+    "            if tgt == \"compare\":\n",
+    "                descriptors = COMPARE_DESCRIPTORS\n",
+    "            else:\n",
+    "                descriptors = ABLATION_DESCRIPTORS\n",
+    "            for index_category in INDEX_CATEGORYS:\n",
+    "                print(index_category)\n",
+    "                for descriptor in descriptors:\n",
+    "                    for method in METHODS:\n",
+    "                        if descriptor in NOT_T_DESCRIPTORS and method == \"t\":\n",
+    "                            continue\n",
+    "                        all_time_data = []\n",
+    "                        for pose in POSES:\n",
+    "                            file_path = f\"{base_path}/{pose}_{method}{descriptor}_5PA_GSM_wRT/{index_category}.csv\"\n",
+    "                            time_data = read_csv_data(file_path)\n",
+    "                            all_time_data.extend(time_data)\n",
+    "                        print(method, descriptor, np.mean(all_time_data))\n",
+    "    \n",
+    "\n",
+    "calc_index_farm()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -15,7 +500,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.7.16"
   }
  },
